--- a/templates/overlay/pc-portrait.hbs
+++ b/templates/overlay/pc-portrait.hbs
@@ -1,4 +1,4 @@
-{{eLog "Clock Key Context" this}}
+{{eLog (concat "PC Portrait Context of " id) this}}
 
 <div class="clock-key-container {{~#if isActive}} active-key{{/if}}{{~#if (test isGM "&&" isShowingControls)}} active-key{{/if}}" data-size="{{size}}">
 
