--- a/templates/components/clock-key.hbs
+++ b/templates/components/clock-key.hbs
@@ -1,21 +1,24 @@
-{{eLog "Clock Key Context" this}}
+{{eLog (concat "Clock Key Context of " id) this}}
 
-<div class="clock-key-container controls-hidden {{~#if isActive}} active-key{{/if}}" data-size="{{size}}">
+<div class="clock-key-container controls-hidden {{~#unless isVisible}} key-hidden{{/unless}}" data-size="{{size}}">
 
-{{#if (test isVisible "||" isGM)}}
   <div id="{{id}}" class="clock-key"
     data-id="{{id}}"
     data-size="{{size}}"
-    data-active-clock-slot="{{currentClockIndex}}"
     data-is-visible="{{isVisible}}"
+    data-is-name-visible="{{isNameVisible}}"
+    data-is-spotlit="{{isSpotlit}}"
   >
-    {{#if isNameVisible}}
-    <label class="key-label" data-key-id="{{id}}">{{name}}</label>
-    {{/if}}
+    <label class="key-label {{~#unless isNameVisible}} label-hidden{{/unless}}">{{name}}</label>
     <div class="key-image-container {{~#if (test size "==" 1)}} one-key-image-container{{/if}}">
-      <svg class="key-image">
-        <use href="#{{size}}-{{#if (test size "==" 1)}}one-{{/if}}key" class="key-bg" />
-        <rect class="metallic-overlay" x="0" y="0" clip-path="url(#{{size}}-{{#if (test size "==" 1)}}one-{{/if}}key-clip" />
+      <svg class="key-image" viewBox="0 0 400 400">
+        {{#if (test size "==" 1)}}
+          <use href="#{{oneKeyIndex}}-one-key" class="key-bg" />
+          <rect class="metallic-overlay" x="0" y="0" clip-path="url(#{{oneKeyIndex}}-one-key-clip" />
+        {{else}}
+          <use href="#{{size}}-key" class="key-bg" />
+          <rect class="metallic-overlay" x="0" y="0" clip-path="url(#{{size}}-key-clip" />
+        {{/if}}
       </svg>
       {{#each clocks }}
         {{> "systems/eunos-blades/templates/components/clock.hbs" }}
@@ -23,87 +26,4 @@
     </div>
   </div>
 
-  {{!-- Controls:
-
-    isShowingControls: toggle
-
-    Name: Input<text>
-    AddClock: Button
-    RemoveClock: Button
-    IsVisible: Toggle
-    IsHighlighted: Toggle
-    IsNameVisible: Toggle
-
-  --}}
-  {{#if isGM}}
-  {{#if targetFlagKey}}(FLAG KEY NOT CONFIGURED){{else}}
-    <div class="clock-key-controls" data-clock-key="{{id}}">
-
-      {{!-- Control Row: Open Controls Panel --}}
-      <div class="clock-key-controls-row toggle-controls-row">
-
-        {{!-- Client-Side GM Trigger: isShowingControls --}}
-        <div class="clock-button clock-key-button" data-action="show-gm-controls">
-            <i class="fa-solid fa-gear"></i>
-        </div>
-
-      </div>
-
-      {{!-- Control Row: Name --}}
-      <div class="clock-key-controls-row name-row">
-
-        {{!-- Text Input: Key Name --}}
-        <input type="text" class="clock-key-controls-name" data-prop="name" value="{{name}}" />
-
-      </div>
-
-      {{!-- Control Row: Display Mode, Add Clock --}}
-      <div class="clock-key-controls-row button-row">
-
-        {{!-- Button: Add Clock --}}
-        <div class="clock-button clock-key-button" data-action="add-clock" >
-          <i class="fa-solid fa-octagon-plus"></i>
-        </div>
-
-        {{!-- Select: Display Mode --}}
-        <select class="blades-select key-select key-display-mode-select" data-prop="displayMode">
-          {{#select setDisplayMode}}
-          <option value="" hidden disabled selected></option>
-          {{#each displaySelectOptions}}
-          <option value="{{value}}">{{display}}</option>
-          {{/each}}
-          {{/select}}
-        </select>
-
-      </div>
-
-      {{!-- Control Row: Key Toggles --}}
-      <div class="clock-key-controls-row button-row">
-
-        {{!-- Toggle: isVisible --}}
-        <div class="clock-button clock-key-button" data-action="key-toggle" data-prop="isVisible" >
-            <i class="fa-{{#if isVisible}}solid{{else}}thin{{/if}} fa-eye"></i>
-        </div>
-
-        {{!-- Toggle: isNameVisible --}}
-        <div class="clock-button clock-key-button" data-action="key-toggle" data-prop="isNameVisible" >
-            <i class="fa-{{#if isNameVisible}}solid{{else}}thin{{/if}} fa-tag"></i>
-        </div>
-
-      </div>
-
-      {{!-- Control Row: Delete Key --}}
-      <div class="clock-key-controls-row button-row">
-
-        {{!-- Button: Delete Key --}}
-        <div class="clock-button clock-key-button" data-action="delete-key" >
-          <i class="fa-regular fa-octagon-xmark"></i>
-        </div>
-
-      </div>
-    {{/if}}
-
-    </div>
-  {{/if}}
-  {{/if}}
 </div>
