--- a/scss/sheets/_clock-keeper-sheet.scss
+++ b/scss/sheets/_clock-keeper-sheet.scss
@@ -20,7 +20,7 @@
           height: auto;
           line-height: unset;
           font-size: 20px;
-          text-shadow: var(--text-shadow-dark);
+          // text-shadow: var(--text-shadow-dark);
           opacity: 1;
 
           &.fa-duotone {
