--- a/scss/overlay/_blades-overlay.scss
+++ b/scss/overlay/_blades-overlay.scss
@@ -21,6 +21,13 @@ $key-sizes: (
     transform-style: preserve-3d;
   }
 
+  #test-box {
+    height: 200px;
+    width: 200px;
+    background: blue;
+    top: 200px;
+  }
+
 
   @import "../components/clocks";
 
