--- a/scss/sheets/_clock-keeper-sheet.scss
+++ b/scss/sheets/_clock-keeper-sheet.scss
@@ -112,17 +112,15 @@
               display: flex;
               align-items: center;
               justify-content: stretch;
-              background: linear-gradient(45deg, black, rgb(40, 40, 40));
-              color: white;
-              font-family: "Sura";
+              background: linear-gradient(45deg, var(--blades-grey-bright), var(--blades-grey-dark));
               font-size: 24px;
-              box-shadow: inset 0 0 2px 2px black;
+              box-shadow: inset 0 0 2px 2px var(--blades-black-dark);
 
               > div {
                 position: absolute;
                 visibility: hidden;
                 white-space: nowrap;
-                box-shadow: inset 0 0 2px 2px black;
+                box-shadow: inset 0 0 2px 2px var(--blades-black-dark);
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
@@ -135,8 +133,8 @@
                 border-radius: 5px;
 
                 &.controls-back {
-                  color: black;
-                  background: white;
+                  color: var(--blades-black);
+                  background: linear-gradient(45deg, var(--blades-white-bright), var(--blades-grey-bright));;
                 }
               }
             }
