--- a/templates/roll/partials/roll-collab-fortune.hbs
+++ b/templates/roll/partials/roll-collab-fortune.hbs
@@ -247,21 +247,33 @@
       {{/if}}
     </section>
   </div>
+  <div class="roll-sheet-float-block roll-clock-key">
+    {{#if rollClockKey}}
+    {{> "systems/eunos-blades/templates/components/clock-key.hbs" rollClockKey}}
+    {{/if}}
+  </div>
   <div class="roll-sheet-float-block roll-opp-bg-img">
     {{#if rollOpposition}}
-      {{#if rollOpposition.rollOppClock}}
-      {{> "systems/eunos-blades/templates/components/clock.hbs" rollOpposition.rollOppClock isShowingControls=false}}
-      {{else}}
       <img src="{{rollOpposition.rollOppImg}}" />
-      {{/if}}
     {{/if}}
   </div>
   <div class="roll-sheet-float-block roll-opp-bg-overlay">  </div>
   <div class="split-root-right">
     <section class="sheet-main tab-content roll-opp-block nav-group flex-vertical">
-      {{> "systems/eunos-blades/templates/components/roll-collab-opposition.hbs"
-      rollOpposition=rollOpposition
-      factorData=rollFactors.opposition }}
+      {{#if rollOpposition}}
+      <div class="roll-sheet-block factors-block roll-opp-factors roll-opp-type-{{rollOpposition.rollOppType}} flex-vertical">
+        {{#each rollFactors.opposition}}
+        {{#unless isPrimary}}
+        {{#if isActive}}
+        <div class="roll-factor roll-factor-{{name}} {{~#if isPrimary}} roll-factor-primary{{/if}}{{#if cssClasses}} {{cssClasses}}{{/if}} flex-horizontal">
+          <label class="shadowed roll-factor-label">{{name}}</label>
+          <span class="shadowed roll-factor-value">{{display}}</span>
+        </div>
+        {{/if}}
+        {{/unless}}
+        {{/each}}
+      </div>
+      {{/if}}
     </section>
   </div>
 </div>
